--- a/src/components/Message.scss
+++ b/src/components/Message.scss
@@ -4,7 +4,7 @@
   color: #dee2e6;
   font-size: 0.9rem;
   padding: 0.15rem;
-  &:first-child{
+  &:first-child {
     margin-top: auto !important;
   }
 }
@@ -36,7 +36,8 @@
       height: 50px;
       background: rgb(99, 121, 98);
     }
-    img{
+    img {
+      object-fit: fill;
       border-radius: 50%;
       width: 50px;
       height: 50px;
