--- a/src/components/Videos.scss
+++ b/src/components/Videos.scss
@@ -9,45 +9,76 @@
   margin-right: 20px;
 
   .video {
+    .info {
+      color: white;
+      display: flex;
+      align-items: center;
+      position: relative;
+      z-index: 1;
+      left: 4px;
+      bottom: 28px;
 
-    .info{
-        color: white;
-        display: flex;
-        align-items: center;
-        position:relative;
-        z-index: 1;
-        left: 4px;
-        bottom: 32px;
+      .name {
+        border-radius: 0px 10px;
+        padding: 2px;
+        background: black;
+      }
+      .null {
+        flex-grow: 1;
+      }
+      svg {
+        border-radius: 10px 0px;
+        font-size: 1.15em;
+        position: relative;
 
-        .name{
-            border-radius: 0px 5px;
-            padding: 2px;
-            background: black;
-        }
-        .null{
-            flex-grow: 1;
-        }
-        svg{
-            border-radius: 5px 0px;
-            font-size: 1.15em;
-            position: relative;
-            left: 4px;
-            bottom: 2px;
-            padding: 4px;
-            background: black;
-        }
+        bottom: 1px;
+        padding: 4px;
+        right: 5px;
+        background: black;
+      }
     }
   }
   video {
     border-radius: 10px;
-    border: 5px solid rgb(0, 0, 0);
-    background : rgb(0, 0, 0);
-    width: 100%;
 
+    width: 100%;
+    height: 100%;
     object-fit: fill;
     transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
     &:hover {
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
     }
+  }
+
+
+  .pb {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: black;
+    border-radius: 10px;
+    border: 5px solid rgb(0, 0, 0);
+    object-fit: fill;
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    &:hover {
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    }
+  }
+  .profile {
+    border-radius: 50%;
+
+    background: rgb(99, 121, 98);
+    width: 70%;
+    height: 50%;
+
+
+
+  }
+}
+
+@media (max-width: 1300px) {
+  .Videos {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
   }
 }
