상대방의 세팅값 주고받는 api 추가 후 상대방 세팅 상태에 따라 비디오 비주얼 업데이트

--- a/src/components/SettingBar.scss
+++ b/src/components/SettingBar.scss
@@ -30,7 +30,7 @@
   .volume{
     margin-left: 20px;
     margin-right: 10px;
-    width: 250px;
+    max-width: 250px;
   }
   button {
     display: flex;
