--- a/src/components/Videos.scss
+++ b/src/components/Videos.scss
@@ -9,9 +9,25 @@
   margin-right: 20px;
 
   .video {
+
+    margin-top: 20px;
+    margin-bottom: 20px;
+    align-items: center;
+    justify-content: center;
     flex-grow: 1;
     width: 50%;
     max-width: 50%;
+
+    .container {
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .inner {
+        width: 100%;
+      }
+    }
     .info {
       color: white;
       display: flex;
@@ -42,6 +58,7 @@
     }
   }
   video {
+
     border-radius: 10px;
     height: 100%;
     width: 100%;
@@ -51,7 +68,6 @@
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
     }
   }
-
 
   .pb {
     display: flex;
@@ -72,9 +88,6 @@
     background: rgb(99, 121, 98);
     width: 70%;
     height: 50%;
-
-
-
   }
 }
 
@@ -84,12 +97,10 @@
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
 
-    .video{
+    .video {
       max-width: 100%;
       width: 100%;
       height: 100%;
     }
   }
-
-
 }
